2015-11-28  Werner Lemberg  <wl@gnu.org>

	* Version 2.6.2 released.
	=========================


	Tag sources with `VER-2-6-2'.

	* README: Updated.
	* src/*.1: Updated.

2015-11-25  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftstring, ftview] Small clean-ups,

	* src/ftstring.c (event_lcdmode_change): Robustify the switch.
	* src/ftview.c (write_header): Ditto.

2015-11-25  Werner Lemberg  <wl@gnu.org>

	* src/ftstring.c: Fix compilation warnings.

2015-11-24  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftstring] Enable sub-pixel rendering,

	* src/ftstring.c (event_lcdmode_change): New function.
	(Process_Event): New event to change LCD mode.
	(event_help): Offer it.
	(main): Select light LCD filter.

2015-11-22  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftstring.c (main): Move gamma curve in the background.

2015-11-22  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftstring] Enable changing display color.

	* src/ftstring.c (event_color_change): New function.
	(Process_Event) [grKeySpace]: New event to change color.
	(event_help): Offer it.
	(main): Updated.
	* src/ftstring.1: Updated.

2015-11-22  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftstring] Use shared `grSetGlyphGamma'.

	* src/ftcommon.h (FTDemo_String_Context): Remove `gamma_ramp'.
	* src/ftcommon.c (apply_gamma_ramp): Remove.
	(FTDemo_String_Draw): Do not apply gamma correction here.
	* src/ftstring.c (event_gamma_change): Call `grSetGlyphGamma' here.
	(main): Switch from gray to rgb24; update.

2015-11-22  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftstring] Remove gamma toggle.

	* src/ftstring.c (event_help, Process_Event): Updated.

2015-11-21  Alexei Podtelezhnikov  <apodtele@gmail.com>

	Copy-paste typos.

	* src/ftstring.1: Updated.
	* src/ftstring.c: Updated.

2015-11-19  Alexei Podtelezhnikov  <apodtele@gmail.com>

	Cosmetic improvements.

	* src/ftdiff.c (write_global_info): Do not display zero gamma.
	* src/ftgrid.c (event_gamma_change): Ditto.