@@ -1,3 +1,7 @@
+2015-11-28  Alexei Podtelezhnikov  <apodtele@gmail.com>
+
+	* src/ftcommon.c (FTDemo_Display_Clear): Speed up.
+
 2015-11-28  Werner Lemberg  <wl@gnu.org>
 
 	* Version 2.6.2 released.
